# hematita

./: .gitignore  Cargo.toml  FEATURES.md  README-pt-BR.md  README.md  metatable.lua  quine.lua  test.lua  test2.lua  test3.lua  test4.lua  test5.lua  test6.lua  test7.lua
.github/: FUNDING.yml
.github/workflows/: rust.yml
hematita/: Cargo.toml  build.rs
hematita/src/: double.rs  lib.rs  lua_lib.rs
hematita/src/ast/: lexer.rs  mod.rs  parser.rs  tests.rs
hematita/src/compiler/: mod.rs
hematita/src/vm/: constant.rs  mod.rs  tests.rs  value.rs
hematita/tests/: native_function.rs
hematita/tests/matches_standard/: build.rs  main.rs
hematita/tests/matches_standard/lua/: operatorLength.lua  operatorLogicalOr.lua  statementNumericFor.lua  statementWhileRepeat.lua  upValueDeep.lua
hematita_cli/: Cargo.toml
hematita_cli/src/: arguments.rs  main.rs  repl.rs
hematita_da_lua/: Cargo.toml  build.rs
hematita_da_lua/src/: lib.rs  lua_lib.rs
hematita_da_lua/src/ast/: lexer.rs  mod.rs  parser.rs
hematita_da_lua/src/compiler/: mod.rs
hematita_da_lua/src/vm/: mod.rs  value.rs
hematita_da_lua/tests/: native_function.rs
hematita_da_lua_cli/: Cargo.toml
hematita_da_lua_cli/src/: arguments.rs  main.rs  repl.rs
lua_hematita/: Cargo.toml
lua_hematita/src/: lib.rs  lua_lib.rs
lua_hematita_cli/: Cargo.toml
lua_hematita_cli/src/: main.rs
luamoon/: Cargo.toml
luamoon/src/: lib.rs  lua_lib.rs
playground/: Cargo.toml
playground/src/: main.rs
src/: main.rs  parse.rs  unsorted.rs
src/ast/: lexer.rs  parser.rs
src/vm/: bytecode.rs  mod.rs
(+24 files in other folders)
