[package]
name = "hematita"
version = "0.1.0"
description = "A memory safe Lua interpreter"
license = "GPL-3.0"

keywords = ["interpreter", "lua", "vm", "virtual", "machine"]
categories = ["compilers"]
readme = "../README.md"
repository = "https://github.com/danii/hematita"

edition = "2018"
authors = ["Daniel Conley <himself@danii.dev>"]

[dependencies]
hashbrown = "0.11.2"
itertools = "0.10.1"

[dev-dependencies]
diff = "0.1.12"
