[package]
name = "hematita_cli"
version = "0.1.0"
description = "Command line interface for Hematita"
license = "GPL-3.0"

keywords = ["cli", "interpreter", "lua", "vm"]
categories = ["compilers", "command-line-utilities"]
readme = "../README.md"
repository = "https://github.com/danii/hematita"

edition = "2018"
authors = ["Daniel Conley <himself@danii.dev>"]

[dependencies]
hematita = {version = "0.1.0", path = "../hematita"}
pico-args = {version = "0.4.2", features = ["combined-flags"]}
